fixed about section overlap text + top recipe title size (mobile)

--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -1277,7 +1277,7 @@ body {
         div.backboard {
           height: 25rem !important;
           p {
-            width: 28rem !important;
+            width: 26rem !important;
             letter-spacing: 1.2px !important;
             text-shadow: 0px 0.5px 0px hsl(28, 32%, 16%),
               0px -0.5px 0px rgba(0, 0, 0, 1);
@@ -1289,13 +1289,13 @@ body {
       }
     }
 
-    // .topRecipes-container {
-    //   .topRecipes-title {
-    //     h1 {
-    //       font-size: 5rem !important;
-    //     }
-    //   }
-    // }
+    .topRecipes-container {
+      .topRecipes-title {
+        h1 {
+          font-size: 4.8rem !important;
+        }
+      }
+    }
 
     .instagram {
       .title {
